# web3_backend

./: .gitignore  README.md  app.py  pyproject.toml
app/: config.py  main.py  nlp_to_json.py  tests.py
app/modules/: parser.py
app/voice_functionality/: requirements.txt  voice.py
backend-server-main/: README.md
